<resources>
    <string name="app_name">Zeiterfassung</string>
    <!--general -->
    <string name="start">Start</string>
    <string name="ende">Ende</string>
    <string name="filter">filter</string>
    <string name="zeitraum">Zeitraum:</string>
    <string name="cancel">Cancel</string>
    <string name="uhr">Uhr</string>
    <string name="betrag_in_euro">%1$s €</string>
    <string name="ok">OK</string>
    <string name="von">Von</string>
    <string name="kosten_in_euro">%1$s €</string>
    <string name="euro_pro_stunde">%1$s € / Stunde</string>
    <string name="kosten_pro_stueck">%1$s € / Stück</string>
    <string name="bis">Bis</string>
    <string name="euro">€</string>
    <string name="datum">Datum</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="sortieren">Sortieren:</string>
    <string name="uhrzeit">Uhrzeit</string>
    <string name="delete">delete</string>
    <string name="mit">mit</string>

    <!--    finances-->
    <string name="title_activity_finances">Finances</string>
    <string name="wert_euro">Wert (€)</string>
    <string name="gesamtausgaben">Total (€)</string>
    <string name="title_fragment_posten_uebersicht">Finances - Übersicht</string>
    <string name="label_btn_start_finances_activity">Finances</string>
    <string name="label_btn_neuer_posten">Neuer Posten</string>
    <string name="title_posten_details_fragment">Ausgaben für %1$s</string>
    <string name="label_btn_neue_ausgabe">Neue Ausgabe erfassen</string>
    <string name="ausgaben_posten">%1$s €</string>
    <string name="txt_finances_activity_total_amount">Gesamtausgaben:</string>
    <string name="content_description_finances_image">finances image</string>

    <!--    verzicht-->
    <string name="title_verzicht_activity">You must </string>
    <string name="title_add_verzicht_activity">Bitte geben Sie die Daten ein</string>
    <string name="label_btn_start_verzicht_activity">Verzicht</string>
    <string name="description_add_verzicht_name">Name</string>
    <string name="label_btn_add_day_to_verzicht">Add day…</string>
    <string name="label_btn_save_verzicht">Speichern</string>
    <string name="content_description_delete_verzicht_image">delete verzicht image</string>
    <string name="content_description_edit_verzicht_image">edit verzicht image</string>
    <string name="hint_input_text_new_verzicht">Name des neuen Verzichts</string>
    <string name="content_description_btn_add_new_verzicht">neuer Verzicht</string>
    <string name="app_configuration_hint_edit_text_select_user">select user</string>

    <!--    count-->
    <string name="label_btn_start_count_activity">Count it!</string>
    <string name="title_count_activity">CountActivity</string>

    <!--    timerecording-->
    <string name="leistungserbringer">Leistungserbringer:</string>
    <string name="leistungsnehmer">Leistungsnehmer:</string>
    <string name="title_activity_zeiterfassung">Zeiterfassung</string>
    <string name="label_btn_start_timerecording_activity">Zeiterfassung</string>
    <string name="content_description_timerecording_image">timerecording image</string>
    <string name="label_edit_text_neue_zeiterfassung_kommentar">Kommentar</string>
    <string name="dauer">Dauer (Stunden)</string>
    <string name="dauer_required">Dauer (Stunden) *</string>
    <string name="title">Titel</string>
    <string name="title_required">Titel *</string>
    <string name="label_edit_text_neue_zeiterfassung_leistungserbringer">Leistungserbringer</string>
    <string name="title_configure_app_user_fragment">Konfiguration</string>
    <string name="label_who_is_app_user">Wer benutzt die App?</string>
    <string name="zeiterfassung_config_confirm_content_description">Descritpion</string>
    <string name="add_arbeitsverhaeltnis_date_von_bis">bis</string>
    <string name="label_edit_text_neue_zeiterfassung_leistungsnehmer">Leistungsnehmer</string>
    <string name="taetigkeit">Tätigkeit</string>
    <string name="taetigkeit_required">Tätigkeit *</string>
    <string name="title_fragment_configuration">Konfiguration</string>
    <string name="title_fragment_arbeitsvheraeltnis_ubersicht">Übersicht</string>
    <string name="title_fragment_suchfilter">Suchfilter</string>
    <string name="text_fragment_welcome_zeiterfassung">Willkommen zur Zeiterfassungsapp. Was wollen Sie tun?</string>
    <string name="erstellt_von">Erstellt von:</string>
    <string name="erstellt_am">Erstellt am</string>
    <string name="settings">Settings</string>
    <string name="geleistete_stunden">Geleistete Stunden:</string>
    <string name="label_edit_text_neue_zeiterfassung_fahrzeug">Fahrzeug</string>
    <string name="label_edit_text_neue_zeiterfassung_maschine">Anbaugerät</string>
    <string name="title_zeit_arbeitsverhaeltnis">%1$s hilft %2$s beim %3$s</string>
    <string name="title_stueck_arbeitsverhaeltnis">%1$s hilft %2$s</string>
    <string name="loeschen">Löschen?</string>
    <string name="fehlende_daten">Bitte Daten vollständig angeben</string>
    <string name="label_edit_text_app_user">Appuser</string>
    <string name="gesamtkosten">Gesamtkosten:</string>
    <string name="kosten">Kosten:</string>
    <string name="title_edit_arbeitsverhaeltnis_fragment">Details</string>
    <string name="stueckzahl">Anzahl</string>
    <string name="stueckzahl_required">Anzahl *</string>
    <string name="zeit_plus_uhr">%1$s Uhr</string>
    <string name="title_add_arbeitsverhaeltnis_fragment">Anlegen</string>
    <string name="wert_eingeben">Fehlender Wert</string>
    <string name="keine_auswahl">- (Keine Auswahl)</string>
    <string name="bearbeiten">bearbeiten</string>
    <string name="produktname">Produktname</string>
    <string name="produktname_required">Produktname *</string>
    <string name="stundensaetze">Stundensätze</string>
    <string name="title_kosten_pro_stueck">Kosten pro Einheit</string>

    <!--    fragment-sht-->
    <string name="label_btn_start_fragment_activity">Fun with Fragments</string>
    <string name="title_activity_fragment">FragmentActivity</string>

    <!--    databinding sht-->
    <string name="label_btn_start_databinding_activity">Databinding</string>

    <!--    main-activity-->
    <string name="title_main_activity">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="colon">:</string>


</resources>
