<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.helloandroid.view.LocalTimeConverter" />

        <import type="com.example.helloandroid.view.LocalDateConverter" />

        <import type="com.example.helloandroid.view.BigDecimalConverter" />

        <variable
                name="ausgabeDialog"
                type="com.example.helloandroid.finances.view.AddAusgabeDialog" />

        <variable
                name="ausgabeDto"
                type="com.example.helloandroid.finances.view.AusgabeDTO" />

    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dlg_padding"
            android:stretchColumns="1">


        <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.HelloAndroid.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/btn_ausgabe_date_range_start"
                    style="@style/Theme.HelloAndroid.StyleEditTextSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/datum"
                    android:onClick="@{() -> ausgabeDialog.openDatePickerDialog()}"
                    android:text="@={LocalDateConverter.dateToString(ausgabeDto.datum)}"
                    tools:text="20.02.2019" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.HelloAndroid.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.HelloAndroid.StyleEditTextSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/uhrzeit"
                    android:onClick="@{() -> ausgabeDialog.openTimePickerDialog()}"
                    android:text="@={LocalTimeConverter.timeToString(ausgabeDto.uhrzeit)}"
                    tools:text="17:43" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.HelloAndroid.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.HelloAndroid.StyleEditTextSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wert_euro"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:text="@={BigDecimalConverter.bigDecimalToString(ausgabeDto.wert)}"
                    tools:text="20.54" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.HelloAndroid.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.HelloAndroid.StyleEditTextSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/beschreibung"
                    android:text="@={ausgabeDto.beschreibung}"
                    tools:text="some description" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="20dip" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip">

            <Button
                    android:id="@+id/btn_ausgabe_hinzufuegen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="@{() -> ausgabeDialog.closeDialog()}"
                    android:text="@string/cancel"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@id/btn_save_selected_leistungsnehmer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <Button
                    android:id="@+id/btn_save_selected_leistungsnehmer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="@{() -> ausgabeDialog.saveAusgabeAndCloseDialog()}"
                    android:text="@string/ok"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_ausgabe_hinzufuegen"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>