<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="selectFilterDialog"
                type="com.example.helloandroid.timerecording.view.SelectFilterDialog" />
    </data>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:text="@string/label_edit_text_neue_zeiterfassung_leistungsnehmer"
                    android:textSize="30sp" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_leistungsnehmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dip">

            <Button
                    android:id="@+id/btn_cancel_select_leistungsnehmer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="@{() -> selectFilterDialog.closeDialog()}"
                    android:text="@string/cancel"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@id/btn_save_selected_leistungsnehmer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            <Button
                    android:id="@+id/btn_save_selected_leistungsnehmer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@null"
                    android:onClick="@{() -> selectFilterDialog.saveSelectedValuesAndCloseDialog()}"
                    android:text="@string/ok"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_cancel_select_leistungsnehmer"
                    app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</layout>